--- a/main/templates/faq/faq.html
+++ b/main/templates/faq/faq.html
@@ -23,6 +23,16 @@
     <p>
       Yes, but you will not rock.
     </p>
+    <h4>Why you think you are cooler than other AppEngine bootstrap projects?</h4>
+    <p>
+      Because we rock!
+    </p>
+    <h4>Can I help?</h4>
+    <p>
+      For sure! The project is made from us for us. Is something broken? Create an issue, 
+      or if you rock, submit your pull request. Are you a test jedi? We would love to 
+      hear some cool ideas about how we can set a clean testing suite. 
+    </p>    
     <h4>It rocks, but I still don't get it. Can you help me?</h4>
     <p>
       Yes, you can ask questions using the <a href="{{url_for('feedback')}}">feedback form</a>
